WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
291872
declarativeNetRequest: 'allowAllRequests' doesn't work
https://bugs.webkit.org/show_bug.cgi?id=291872
Summary
declarativeNetRequest: 'allowAllRequests' doesn't work
Elijah Sawyers
Reported
2025-04-21 16:54:52 PDT
rdar://72203692
Attachments
Add attachment
proposed patch, testcase, etc.
Elijah Sawyers
Comment 1
2025-04-21 17:07:23 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/44354
EWS
Comment 2
2025-04-23 20:51:46 PDT
Committed
294041@main
(2de894785a2f): <
https://commits.webkit.org/294041@main
> Reviewed commits have been landed. Closing PR #44354 and removing active labels.
EWS
Comment 3
2025-05-09 15:33:07 PDT
Committed
289651.495@safari-7621-branch
(8e78541988a2): <
https://commits.webkit.org/289651.495@safari-7621-branch
> Reviewed commits have been landed. Closing PR #3074 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug